@@ -1,5 +1,7 @@
 # Tests
 
+### 1) JavaDoc --> IntelliJ Menüpunkt "Tools" --> "Generate JavaDoc" --> Wählt eine "Output directory", dort wird die Dokumentation gespeichert. Im Feld "Other command line arguments:" müsst ihr folgendes einfügen: "--enable-preview --release 14". Danach könnt ihr auf "OK" klicken. Sollte es keinen Fehler geben, sollte sich der Browser mit der Dokumentation öffnen. Geschieht dies nicht, exestieren Fehler, welche im Terminal ausgelesen werden können. In diesem Fall ist die entsprechende Zelle mit "Fehler" zu kennzeichnen.
+
 ### Version 1.10 / BER
 | Art der Testung           | Phillip   | Severin   | Teressa   | Tobias    |
 | ---                       | ---       | ---       | ---       | ---       |
